--- a/eval_configs/minigpt4_eval.yaml
+++ b/eval_configs/minigpt4_eval.yaml
@@ -9,8 +9,8 @@ model:
   prompt_path: "prompts/alignment.txt"
   prompt_template: '###Human: {} ###Assistant: '
   # ckpt: '/path/to/pretrained/ckpt/'
-  ckpt: 'prerained_minigpt4_7b.pth'
-
+  # ckpt: 'prerained_minigpt4_7b.pth'
+  ckpt: 'pretrained_minigpt4.pth'
 
 datasets:
   cc_sbu_align:
